--- a/assets/www/index.html
+++ b/assets/www/index.html
@@ -23,20 +23,48 @@
         <meta name="format-detection" content="telephone=no" />
         <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height, target-densitydpi=device-dpi" />
         <link rel="stylesheet" type="text/css" href="css/index.css" />
-        <title>Hello World</title>
+
+        <!-- Angulars Material CSS now available via Google CDN; version 0.6 used here -->
+        <link rel="stylesheet" href="http://ajax.googleapis.com/ajax/libs/angular_material/0.6.1/angular-material.min.css">
+
+        <title>FallingApp</title>
     </head>
     <body>
-        <div class="app">
-            <h1>Apache Cordova</h1>
-            <div id="deviceready" class="blink">
-                <p class="event listening">Connecting to Device</p>
-                <p class="event received">Device is Ready</p>
+        <div id="app">
+            <div ng-controller="AppCtrl">
+                <md-content>
+                    <div layout="column" layout-fill>
+                        <div layout="row">
+                            <md-toolbar>Your header</md-toolbar>
+                        </div>
+                        <div layout="row" flex>
+                            <md-sidebar>
+                                Sidebar
+                            </md-sidebar>
+                            <md-card flex="66">
+                                Main content
+                            </md-card>
+                        </div>
+                        <div layout="row">
+                            The footer!
+                        </div>
+                    </div>
+                </md-content>
             </div>
         </div>
-        <script type="text/javascript" src="cordova.js"></script>
+        <!-- // <script type="text/javascript" src="cordova.js"></script> -->
         <script type="text/javascript" src="js/index.js"></script>
         <script type="text/javascript">
             app.initialize();
         </script>
+
+        <!-- Angular Material Dependencies -->
+        <script src="http://cdn.jsdelivr.net/hammerjs/2.0.4/hammer.min.js"></script>
+        <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.3.6/angular.min.js"></script>
+        <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.3.6/angular-animate.min.js"></script>
+        <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.3.6/angular-aria.min.js"></script>
+
+        <!-- Angular Material Javascript now available via Google CDN; version 0.6 used here -->
+        <script src="http://ajax.googleapis.com/ajax/libs/angular_material/0.6.1/angular-material.min.js"></script>
     </body>
 </html>
