Added angular layout. (Promises not working)

--- a/assets/www/index.html
+++ b/assets/www/index.html
@@ -21,7 +21,7 @@
     <head>
         <meta charset="utf-8" />
         <meta name="format-detection" content="telephone=no" />
-        <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height, target-densitydpi=device-dpi" />
+        <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height" />
         <link rel="stylesheet" type="text/css" href="css/index.css" />
 
         <!-- Angulars Material CSS now available via Google CDN; version 0.6 used here -->
@@ -31,32 +31,34 @@
     </head>
     <body>
         <div id="app">
-            <div ng-controller="AppCtrl">
-                <md-content>
-                    <div layout="column" layout-fill>
-                        <div layout="row">
-                            <md-toolbar>Your header</md-toolbar>
+            <div ng-app="FallingApp" ng-controller="AppCtrl">
+                <section layout="row">
+                    <md-sidenav class="md-sidenav-left md-whiteframe-z2" md-component-id="left" hide-lt-md>
+                      <md-toolbar class="md-theme-indigo">
+                        <h1 class="md-toolbar-tools">Sidenav Left</h1>
+                      </md-toolbar>
+                      <md-content class="md-padding" ng-controller="LeftCtrl">
+                        <p>
+                          Hello there
+                        </p>
+                      </md-content>
+                    </md-sidenav>
+                    <md-content flex class="md-padding">
+                      <div layout="column" layout-fill layout-align="center center">
+                        <md-toolbar class="md-theme-indigo">
+                            <h1 class="md-toolbar-tools">TITLE</h1>
+                          </md-toolbar>
+                        <p>The left sidenav will 'lock open' on a medium (>=960px wide) device.</p>
+                        <div>
+                          <md-button ng-click="toggleLeft()" class="md-primary">
+                            Toggle left
+                          </md-button>
                         </div>
-                        <div layout="row" flex>
-                            <md-sidebar>
-                                Sidebar
-                            </md-sidebar>
-                            <md-card flex="66">
-                                Main content
-                            </md-card>
-                        </div>
-                        <div layout="row">
-                            The footer!
-                        </div>
-                    </div>
-                </md-content>
+                      </div>
+                    </md-content>
+                </section>
             </div>
         </div>
-        <!-- // <script type="text/javascript" src="cordova.js"></script> -->
-        <script type="text/javascript" src="js/index.js"></script>
-        <script type="text/javascript">
-            app.initialize();
-        </script>
 
         <!-- Angular Material Dependencies -->
         <script src="http://cdn.jsdelivr.net/hammerjs/2.0.4/hammer.min.js"></script>
@@ -66,5 +68,13 @@
 
         <!-- Angular Material Javascript now available via Google CDN; version 0.6 used here -->
         <script src="http://ajax.googleapis.com/ajax/libs/angular_material/0.6.1/angular-material.min.js"></script>
+
+        <!-- // <script type="text/javascript" src="cordova.js"></script> -->
+        <script type="text/javascript" src="js/index.js"></script>
+        <script type="text/javascript" src="js/falling.js"></script>
+        <script type="text/javascript">
+            app.initialize();
+        </script>
+
     </body>
 </html>
