--- a/assets/www/index.html
+++ b/assets/www/index.html
@@ -50,21 +50,23 @@
             and much more on your Wearable.
           </div>
           <div class="logo module"></div>
-          <div class="form module">
-            <div class="labels">
-              <label>Concious ID:</label>
-              <label>Password:</label>
+          <form>
+            <div class="form module">
+                <div class="labels">
+                  <label>Concious ID:</label>
+                  <label>Password:</label>
+                </div>
+                <div class="inputs">
+                  <input type="text" required />
+                  <input type="password" required />
+                  <a class="forgot">Forgot your Concious ID or password?</a>
+                </div>
             </div>
-            <div class="inputs">
-              <input type="text" />
-              <input type="password" />
-              <a class="forgot">Forgot your Concious ID or password?</a>
+            <div class="buttons module">
+              <div class="circle grey sign-up"></div>
+              <button type="submit" class="circle blue sign-in"></button>
             </div>
-          </div>
-          <div class="buttons module">
-            <div class="circle grey sign-up"></div>
-            <div class="circle blue sign-in"></div>
-          </div>
+          </form>
         </div>
 
         <div class="card reg out nav-buttons">
