--- a/assets/www/index.html
+++ b/assets/www/index.html
@@ -88,7 +88,7 @@
             <div class="inputs">
               <input type="text" name="firstName" />
               <input type="text" name="lastName" />
-              <input type="phone" name="phone" />
+              <input type="tel" name="phone" />
               <input type="email" name="email" />
               <input type="date" name="birthday" />
             </div>
@@ -132,22 +132,22 @@
           <div class="sensor-list module">
             <div class="sensor-row hr">
               <div class="sensor-reset"></div>
-              <div class="sensor-indicator on circle green"></div>
+              <div class="sensor-indicator off circle green"></div>
               <div class="sensor-label">Heart Rate (PPG)</div>
             </div>
             <div class="sensor-row acc">
               <div class="sensor-reset"></div>
-              <div class="sensor-indicator on circle green"></div>
+              <div class="sensor-indicator off circle green"></div>
               <div class="sensor-label">Accelerometer</div>
             </div>
             <div class="sensor-row gyro">
               <div class="sensor-reset"></div>
-              <div class="sensor-indicator on circle green"></div>
+              <div class="sensor-indicator off circle green"></div>
               <div class="sensor-label">Gyro</div>
             </div>
             <div class="sensor-row gps">
               <div class="sensor-reset"></div>
-              <div class="sensor-indicator on circle green"></div>
+              <div class="sensor-indicator off circle green"></div>
               <div class="sensor-label">GPS</div>
             </div>
             <div class="sensor-row prox">
@@ -301,10 +301,9 @@
     <!-- Angular Material Javascript now available via Google CDN; version 0.6 used here
     <script src="http://ajax.googleapis.com/ajax/libs/angular_material/0.6.1/angular-material.min.js"></script> -->
 
-    <!-- // <script type="text/javascript" src="cordova.js"></script> -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-    <script type="text/javascript" src="js/index.js"></script>
     <script type="text/javascript" src="js/falling.js"></script>
+    <script type="text/javascript" src="js/index.js"></script>
     <script type="text/javascript">
     app.initialize();
     </script>
