--- a/assets/www/index.html
+++ b/assets/www/index.html
@@ -32,15 +32,36 @@
     <!-- Templates -->
     <script id="forwardBackButtons" type="text/html">
       <div class="nav-controls">
-        <div class="circle grey back"></div>
-        <div class="circle blue next"></div>
+        <div class="circle circle-button grey back"></div>
+        <div class="circle circle-button blue next"></div>
       </div>
     </script>
+
+    <script id="contactEditForm" type="text/html">
+      <div class="header">Contact Entry</div>
+      <form onsubmit="return createContact($(this))">
+        <label>First Name:</label>
+        <input type="text" name="firstname" />
+        <label>Last Name:</label>
+        <input type="text" name="lastname" />
+        <label>Relationship:</label>
+        <input type="text" name="relationship" />
+        <label>Phone Number:</label>
+        <input type="tel" name="phone" />
+
+        <button onclick="closeOverlay()">Cancel</button>
+        <button type="submit" style="float:right;">Submit</button>
+    </script>
+
   </head>
   <body>
+    <div id="overlay">
+      <div class="wrapper"></div>
+    </div>
     <div id="content">
       <div class="oobe carousel">
         <div class="overlay"></div>
+
         <div class="card login active">
           <div class="header module">
             CONSCIOUS ID
@@ -63,15 +84,15 @@
                 </div>
             </div>
             <div class="buttons module">
-              <div class="circle grey sign-up"></div>
-              <button type="submit" class="circle blue sign-in"></button>
+              <div class="circle circle-button grey sign-up"></div>
+              <button type="submit" class="circle circle-button blue sign-in"></button>
             </div>
           </form>
         </div>
 
         <div class="card reg out nav-buttons">
           <div class="header module">
-            Registration
+            User Info
           </div>
           <div class="sub-head module">
             General Info
@@ -80,25 +101,42 @@
           <div class="form module ">
             <div class="labels">
               <label>First Name:</label>
+              <label>Middle Name:</label>
               <label>Last Name:</label>
-              <label>Phone Number:</label>
               <label>Email Address:</label>
-              <label>Birthday:</label>
+              <label>Password:</label>
+              <label>Phone Number:</label>
+              <label>Address:</label>
+              <label>City:</label>
+              <label>State:</label>
+              <label>Zip Code:</label>
+              <label>Birthdate:</label>
+              <label>Age:</label>
             </div>
             <div class="inputs">
               <input type="text" name="firstName" />
+              <input type="text" name="middleName" />
               <input type="text" name="lastName" />
-              <input type="tel" name="phone" />
               <input type="email" name="email" />
-              <input type="date" name="birthday" />
+              <input type="password" name="passowrd" />
+              <input type="tel" name="phone" />
+              <input type="text" name="address" />
+              <input type="text" name="city" />
+              <input type="text" name="state" />
+              <input type="text" name="zip" />
+              <input type="date" name="birthday" onchange="setAgeInput()" />
+              <input type="number" name="age" class="age" disabled="true"/>
             </div>
           </div>
+          <!-- <div class="sensor-edit center"></div> -->
+        </div>
 
+        <div class="card data out nav-buttons">  
           <div class="header module">
-            User Permission
+            Data
           </div>
           <div class="sub-head module">
-            Data Collection
+            We collect and store all your data on our cloud servers that are HIPPA compliant for your safety
           </div>
 
           <div class="sensor-list permissions module">
@@ -107,8 +145,7 @@
               <div class="sensor-indicator on circle green"></div>
               <div class="sensor-label">
                 <p>Do we have your permission to collect data from our product?</P>
-                <span class="blue-text">*We need this setting on as a minimum to use our service</span>
-                <span>**We store your data for 3 days on our HIPPA compliant Cloud servers</span>
+                <span class="blue-text">we store your data for 3 days</span>
               </div>
             </div>
             <div class="sensor-row cloud">
@@ -116,10 +153,10 @@
               <div class="sensor-indicator on circle green"></div>
               <div class="sensor-label">
                 <p>Would you like valuable key insights into your daily, weekly and monthly activities?</p>
-                <span>*We store your data on our HIPPA compliant Cloud servers</span>
-                <span>**We will need to collect your data for a minimum of 30 days to provide valuable insights</span>
+                <span>we collect and store your data for 30 days to provide valuable insights</span>
               </div>
             </div>
+            <div class="sensor-edit center"></div>
           </div>
           
         </div>
@@ -216,7 +253,7 @@
               <div class="sensor-test"></div>
               <div class="sensor-indicator on circle green"></div>
               <div class="sensor-label">
-                <p>Level 1,2,3 - Incident System</p>
+                <!-- <p>Level 1,2,3 - Incident System</p> -->
                 John Smith
                 <p>Husband</p>
               </div>
@@ -226,7 +263,7 @@
               <div class="sensor-test"></div>
               <div class="sensor-indicator on circle green"></div>
               <div class="sensor-label">
-                <p>Level 1,2,3 - Incident System</p>
+                <!-- <p>Level 1,2,3 - Incident System</p> -->
                 Kim Lawless
                 <p>Daughter</p>
               </div>
@@ -236,12 +273,15 @@
               <div class="sensor-test"></div>
               <div class="sensor-indicator on circle green"></div>
               <div class="sensor-label">
-                <p>Level 3 - Incident System</p>
+                <!-- <p>Level 3 - Incident System</p> -->
                 Susan Johnson
                 <p>Neighbor</p>
               </div>
               <div class="sensor-edit"></div>
             </div>
+          </div>
+          <div class="module">
+            <div class="sensor-add" onclick="addContact(false)">+</div>
           </div>
         </div>
 
@@ -252,10 +292,10 @@
 
           <div class="sensor-list module">
             <div class="sensor-row em-contact">
-              <div class="sensor-test"></div>
+              <div class="sensor-test transparent"></div>
               <div class="sensor-indicator on circle green"></div>
               <div class="sensor-label">
-                <p>IMMEDIATE - Incident System</p>
+                <!-- <p>IMMEDIATE - Incident System</p> -->
                 E911
                 <p>Local Emergency Dispatch Center</p>
               </div>
@@ -265,7 +305,7 @@
               <div class="sensor-test"></div>
               <div class="sensor-indicator on circle green"></div>
               <div class="sensor-label">
-                <p>IMMEDIATE - Incident System</p>
+                <!-- <p>IMMEDIATE - Incident System</p> -->
                 Kim Lawless
                 <p>Daughter</p>
               </div>
@@ -275,7 +315,7 @@
               <div class="sensor-test"></div>
               <div class="sensor-indicator on circle green"></div>
               <div class="sensor-label">
-                <p>Level 3 - Incident System</p>
+                <!-- <p>Level 3 - Incident System</p> -->
                 Gloria Elizadro
                 <p>Personal Caregiver</p>
               </div>
@@ -283,7 +323,7 @@
             </div>
           </div>
           <div class="module">
-            <div class="sensor-add">+</div>
+            <div class="sensor-add" onclick="addContact(true)">+</div>
           </div>
         </div>
       </div>
@@ -291,15 +331,6 @@
         <div>MAIN PAGE</div>
       </div>
     </div>
-
-    <!-- Angular Material Dependencies
-    <script src="http://cdn.jsdelivr.net/hammerjs/2.0.4/hammer.min.js"></script>
-    <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.3.6/angular.min.js"></script>
-    <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.3.6/angular-animate.min.js"></script>
-    <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.3.6/angular-aria.min.js"></script> -->
-
-    <!-- Angular Material Javascript now available via Google CDN; version 0.6 used here
-    <script src="http://ajax.googleapis.com/ajax/libs/angular_material/0.6.1/angular-material.min.js"></script> -->
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
     <script type="text/javascript" src="js/falling.js"></script>
